fixed footer, paragraph spacing and text

--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@ body {
     min-height: 100vh;
     position: relative;
     margin: 2em auto;
+    padding-bottom: 2em;
     font-family: var(--main-text);
     font-size: var(--regular);
     color: var(--main-text-color);
@@ -68,7 +69,7 @@ body {
 
 /* Wrapper for the child compoenents placed in the main content area */
 .main-content {
-    margin-top: 6em;
+    margin-top: 3em;
 }
 
 
@@ -128,9 +129,8 @@ body {
 .footer {
     font-weight: var(--light);
     font-size: var(--extra-small);
-    text-align: center;
     position: absolute;
-    bottom: 50px;
+    bottom: 0;
     width: 100%;
     height: 2em;
 }
@@ -184,8 +184,7 @@ body {
 }
 
 .description {
-    font-family: var(--medium);
-    font-size: var(--large);
+    font-size: var(--medium);
     line-height: 1.5em;
     margin-top: 0;
 }
@@ -255,12 +254,34 @@ body {
 
 /* Responsive Styling */
 @media screen and (min-width: 840px) {
+    .main-content {
+        margin-top: 6em;
+    }
+
+    .description {
+        font-size: var(--large);
+    }
+
     .cta-link {
         width: 30%;
     }
+}
 
-    .footer {
-        width: 90%;
-        text-align: left;
+/* Mobile Styles */
+@media screen and (max-width: 300px) {
+    .app-container {
+        margin-left: 1.2em;
+    }
+
+    .main-content {
+        margin-top: 3em;
+    }
+
+    .nav-list {
+        gap: 15px;
+    }
+
+    .cta-link {
+        width: 30%;
     }
 }
